--- a/templates/formulaire_livre.html
+++ b/templates/formulaire_livre.html
@@ -6,7 +6,7 @@
     <title>Formulaire d'enregistrement d'un nouveau livre</title>
 </head>
 <body>
-    <h1>Enregistrer un nouveau client</h1>
+    <h1>Enregistrer un nouveau livre</h1>
     <form action="./enregistrer_client" method="POST">
         <label for="nom">Nom :</label>
         <input type="text" id="nom" name="nom" required><br><br>
