--- a/templates/formulaire_livre.html
+++ b/templates/formulaire_livre.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Enregistrer un nouveau livre</h1>
-    <form action="./enregistrer_client" method="POST">
+    <form action="./enregistrer_livre" method="POST">
         <label for="nom">Nom :</label>
         <input type="text" id="nom" name="nom" required><br><br>
         <button type="submit">Enregistrer</button>
