--- a/templates/formulaire_emprunt.html
+++ b/templates/formulaire_emprunt.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulaire d'enregistrement d'un nouveau client</title>
+    <title>Formulaire d'enregistrement d'un nouvelle emprunt</title>
 </head>
 <body>
-    <h1>Enregistrer un nouveau client</h1>
+    <h1>Enregistrer un nouvelle emprunt</h1>
     <form action="./enregistrer_client" method="POST">
         <label for="id_client">ID du client :</label>
         <input type="text" id="id_client" name="id_client" required><br><br>
