--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,3 +1,19 @@
 <!doctype html>
 <title>Flask Server</title>
-<h1> Hello from Flask Server !</h1>
+<h1> Bienvenue! !</h1><br>
+<h2>Liste des commandes :</h2>
+<div>
+  {URL}/authentification
+  {URL}/consultation
+  {URL}/fiche_client/{id_client}
+  {URL}/fiche_nom/{nom_client}
+  {URL}/enregistrer_client
+  {URL}/consultation_livre
+  {URL}/enregistrer_livre
+  {URL}/supprimer_livre/{id_livre}
+  {URL}/fiche_livre_id/{id_livre}
+  {URL}/fiche_livre_nom/{nom_livre}
+  {URL}/consultation_emprunts
+  {URL}/enregistrer_emprunt
+  {URL}/retour/{id_emprunt}
+</div>
