--- a/templates/formulaire_livre.html
+++ b/templates/formulaire_livre.html
@@ -10,6 +10,8 @@
     <form action="./enregistrer_livre" method="POST">
         <label for="nom">Nom :</label>
         <input type="text" id="nom" name="nom" required><br><br>
+        <label for="auteur">Auteur :</label>
+        <input type="text" id="auteur" name="auteur" required><br><br>
         <button type="submit">Enregistrer</button>
     </form>
 </body>
