--- a/templates/ajouter_livre.html
+++ b/templates/ajouter_livre.html
@@ -9,6 +9,9 @@
             <div class="form-group">
                 {{ form.nom.label }} {{ form.nom(class="form-control") }}
             </div>
+            <div class="form-group">
+                {{ form.auteur.label }} {{ form.auteur(class="form-control") }}
+            </div>
             {{ form.submit(class="btn btn-primary") }}
         </form>
         <div class="col-sm-3"></div>
