--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,17 +3,17 @@
 <h1> Bienvenue! !</h1><br>
 <h2>Liste des commandes :</h2>
 <div>
-  {URL}/authentification
-  {URL}/consultation
-  {URL}/fiche_client/{id_client}
-  {URL}/fiche_nom/{nom_client}
-  {URL}/enregistrer_client
-  {URL}/consultation_livre
-  {URL}/enregistrer_livre
-  {URL}/supprimer_livre/{id_livre}
-  {URL}/fiche_livre_id/{id_livre}
-  {URL}/fiche_livre_nom/{nom_livre}
-  {URL}/consultation_emprunts
-  {URL}/enregistrer_emprunt
-  {URL}/retour/{id_emprunt}
+  <p>{URL}/authentification</p>
+  <p>{URL}/consultation</p>
+  <p>{URL}/fiche_client/{id_client}</p>
+  <p>{URL}/fiche_nom/{nom_client}</p>
+  <p>{URL}/enregistrer_client</p>
+  <p>{URL}/consultation_livre</p>
+  <p>{URL}/enregistrer_livre</p>
+  <p>{URL}/supprimer_livre/{id_livre}</p>
+  <p>{URL}/fiche_livre_id/{id_livre}</p>
+  <p>{URL}/fiche_livre_nom/{nom_livre}</p>
+  <p>{URL}/consultation_emprunts</p>
+  <p>{URL}/enregistrer_emprunt</p>
+  <p>{URL}/retour/{id_emprunt}</p>
 </div>
