--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,6 +8,7 @@
   <p>{URL}/fiche_client/{id_client}</p>
   <p>{URL}/fiche_nom/{nom_client}</p>
   <p>{URL}/enregistrer_client</p>
+  <p>{URL}/supprimer_client</p>
   <p>{URL}/consultation_livre</p>
   <p>{URL}/enregistrer_livre</p>
   <p>{URL}/supprimer_livre/{id_livre}</p>
