--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,17 +3,23 @@
 <h1> Bienvenue! !</h1><br>
 <h2>Liste des commandes :</h2>
 <div>
-  <p>{URL}/authentification</p>
+  <p>{URL}/authentification</p><br>
+  
+  <p>Gestion client:<p>
   <p>{URL}/consultation</p>
   <p>{URL}/fiche_client/{id_client}</p>
   <p>{URL}/fiche_nom/{nom_client}</p>
   <p>{URL}/enregistrer_client</p>
-  <p>{URL}/supprimer_client</p>
+  <p>{URL}/supprimer_client</p><br>
+
+  <p>Gestion librairie:<p>
   <p>{URL}/consultation_livre</p>
-  <p>{URL}/enregistrer_livre</p>
-  <p>{URL}/supprimer_livre/{id_livre}</p>
   <p>{URL}/fiche_livre_id/{id_livre}</p>
   <p>{URL}/fiche_livre_nom/{nom_livre}</p>
+  <p>{URL}/enregistrer_livre</p>
+  <p>{URL}/supprimer_livre/{id_livre}</p><br>
+
+  <p>Gestion des emprunts:<p>
   <p>{URL}/consultation_emprunts</p>
   <p>{URL}/enregistrer_emprunt</p>
   <p>{URL}/retour/{id_emprunt}</p>
