--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,23 +3,24 @@
 <h1> Bienvenue! !</h1><br>
 <h2>Liste des commandes :</h2>
 <div>
-  <p>{URL}/authentification</p><br>
   
-  <h2>Gestion client:</h2>
+  <br><p>{URL}/authentification</p><br>
+  
+  <h3>Gestion client:</h3>
   <p>{URL}/consultation</p>
   <p>{URL}/fiche_client/{id_client}</p>
   <p>{URL}/fiche_nom/{nom_client}</p>
   <p>{URL}/enregistrer_client</p>
   <p>{URL}/supprimer_client</p><br>
 
-  <h2>Gestion librairie:</h2>
+  <h3>Gestion librairie:</h3>
   <p>{URL}/consultation_livre</p>
   <p>{URL}/fiche_livre_id/{id_livre}</p>
   <p>{URL}/fiche_livre_nom/{nom_livre}</p>
   <p>{URL}/enregistrer_livre</p>
   <p>{URL}/supprimer_livre/{id_livre}</p><br>
 
-  <h2>Gestion des emprunts:</h2>
+  <h3>Gestion des emprunts:</h3>
   <p>{URL}/consultation_emprunts</p>
   <p>{URL}/enregistrer_emprunt</p>
   <p>{URL}/retour/{id_emprunt}</p>
