--- a/templates/read_emprunt.html
+++ b/templates/read_emprunt.html
@@ -13,6 +13,7 @@
             <th>ID_livre</th>
             <th>Date d'emprunt</th>
             <th>Date de retour</th>
+            <th>Etat de l'emprunt</th>
         </tr>
         {% for row in data %}
         <tr>
@@ -21,6 +22,7 @@
             <td>{{ row[2] }}</td>
             <td>{{ row[3] }}</td>
             <td>{{ row[4] }}</td>
+            <td>{{ row[5] }}</td>
         </tr>
         {% endfor %}
     </table>
