--- a/templates/read_emprunt.html
+++ b/templates/read_emprunt.html
@@ -5,7 +5,7 @@
     <title>Clients</title>
 </head>
 <body>
-    <h1>Liste des Clients</h1>
+    <h1>Liste des emprunts</h1>
     <table>
         <tr>
             <th>ID</th>
