--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,7 +4,8 @@
 <h2>Liste des commandes :</h2>
 <div>
   
-  <br><p>{URL}/authentification</p><br>
+  <br><p>{URL}/authentification</p>
+  <br><p>{URL}/deconnexion</p><br>
   
   <h3>Gestion client:</h3>
   <p>{URL}/consultation</p>
