--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,9 +3,9 @@
 <h1> Bienvenue! !</h1><br>
 <h2>Liste des commandes :</h2>
 <div>
-  
-  <br><p>{URL}/authentification</p>
-  <br><p>{URL}/deconnexion</p><br>
+  <br>
+  <p>{URL}/authentification</p>
+  <p>{URL}/deconnexion</p><br>
   
   <h3>Gestion client:</h3>
   <p>{URL}/consultation</p>
