--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,4 +1,8 @@
 <!doctype html>
+
+<head>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
 <title>Flask Server</title>
 <h1> Bienvenue! !</h1><br>
 <h2>Liste des commandes :</h2>
