--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <title>Flask Server</title>
-<p id="barre"></p>
+<p class="barre">.</p>
 <h1> Bienvenue! !</h1><br>
 <h2>Liste des commandes :</h2>
 <div>
