--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,32 +2,48 @@
 
 <head>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <title>Flask Server</title>
 </head>
-<title>Flask Server</title>
-<p class="barre">.</p>
-<h1> Bienvenue! !</h1><br>
-<h2>Liste des commandes :</h2>
-<div>
-  <br>
-  <p>{URL}/authentification</p>
-  <p>{URL}/deconnexion</p><br>
+<body>
+  <div>
+        <div class="logo">
+          <a href="hello.html"><img  src="logosite.PNG"></a>
+          <nav>
+            <ul>
+              <li class="deroulant" id="connect"><p>Menu</p>
+                <ul class="sous">
+                  <li><a href="read_data.html">Consulter</a></li>
+                  <li><a href="read_emprunt.html">Consulter emprunts</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+  <h1> Bienvenue! !</h1><br>
+  <h2>Liste des commandes :</h2>
+  <div>
+    <br>
+    <p>{URL}/authentification</p>
+    <p>{URL}/deconnexion</p><br>
   
-  <h3>Gestion client:</h3>
-  <p>{URL}/consultation</p>
-  <p>{URL}/fiche_client/{id_client}</p>
-  <p>{URL}/fiche_nom/{nom_client}</p>
-  <p>{URL}/enregistrer_client</p>
-  <p>{URL}/supprimer_client</p><br>
+    <h3>Gestion client:</h3>
+    <p>{URL}/consultation</p>
+    <p>{URL}/fiche_client/{id_client}</p>
+    <p>{URL}/fiche_nom/{nom_client}</p>
+    <p>{URL}/enregistrer_client</p>
+    <p>{URL}/supprimer_client</p><br>
 
-  <h3>Gestion librairie:</h3>
-  <p>{URL}/consultation_livre</p>
-  <p>{URL}/fiche_livre_id/{id_livre}</p>
-  <p>{URL}/fiche_livre_nom/{nom_livre}</p>
-  <p>{URL}/enregistrer_livre</p>
-  <p>{URL}/supprimer_livre/{id_livre}</p><br>
+    <h3>Gestion librairie:</h3>
+    <p>{URL}/consultation_livre</p>
+    <p>{URL}/fiche_livre_id/{id_livre}</p>
+    <p>{URL}/fiche_livre_nom/{nom_livre}</p>
+    <p>{URL}/enregistrer_livre</p>
+    <p>{URL}/supprimer_livre/{id_livre}</p><br>
 
-  <h3>Gestion des emprunts:</h3>
-  <p>{URL}/consultation_emprunts</p>
-  <p>{URL}/enregistrer_emprunt</p>
-  <p>{URL}/retour/{id_emprunt}</p>
-</div>
+    <h3>Gestion des emprunts:</h3>
+    <p>{URL}/consultation_emprunts</p>
+    <p>{URL}/enregistrer_emprunt</p>
+    <p>{URL}/retour/{id_emprunt}</p>
+  </div>
+</body>
