--- a/static/style.css
+++ b/static/style.css
@@ -4,3 +4,106 @@
   display:flex;
   justify-content: space-around;
 }
+
+nav{
+  width:75%;
+  margin: 0 auto;
+  position: sticky;
+  top: 0px;
+}
+
+nav ul{
+  list-style-type: none;
+}
+
+nav ul li{
+  float: right;
+  width: 15%;
+  margin-left: 3%;
+  text-align: center;
+  position: relative;
+}
+
+nav ul::after{
+  content:"";
+  display:block;
+  clear:both;
+}
+
+nav a{
+  display: block;
+  text-decoration: none;
+  color:white;
+  border:2px solid white;
+  align-content: center;
+  padding: 10px;
+}
+
+nav p{
+  height:100%;
+  width:100%;
+  display: block;
+  text-decoration: none;
+  color:white;
+  border:2px solid white;
+  padding: 3%;
+  margin-left:10%;
+}
+
+nav a:hover{
+  color:orange;
+  border: 2px solid gold;
+}
+
+nav p:hover{
+  color:orange;
+  border: 2px solid gold;
+}
+
+.sous{
+  display:none;
+  background-color: gray;
+  border: 1px solid white;
+  position: absolute;
+  width: auto;
+  z-index: 1000;
+}
+
+nav > ul li:hover .sous{
+  display: block;
+}
+
+.sous li{
+  float: none;
+  width:100%;
+  text-align:left;
+}
+
+
+.down{
+  width:100%;
+  height: 2em;
+  background-color: rgb(183, 55, 57);
+}
+
+#null{
+  color:rgb(183, 55, 57);
+}
+.rectangle {
+  width: auto;
+  height: auto;
+  border: 1px solid white;
+  background-color: black;
+  text-align: center;
+  color: white;
+  padding: 20px;
+  display: inline-block;
+  margin-left: 20px;
+}
+.display{
+  width: auto;
+  height: auto;
+  display: inline-block;
+  margin-left: 20px;
+
+}
