--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <head>
-  <link href="./static/style.css" rel="stylesheet" type="text/css" />
+  <link href="../static/style.css" rel="stylesheet" type="text/css" />
   <title>Flask Server</title>
 </head>
 <body>
