--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="background-color: black;">
+<html style="background-color: BurlyWood;">
 <head>
   <link href="../static/style.css" rel="stylesheet" type="text/css" />
   <title>Flask Server</title>
