--- a/templates/hello.html
+++ b/templates/hello.html
@@ -12,8 +12,8 @@
             <ul>
               <li class="deroulant" id="connect"><p>Menu</p>
                 <ul class="sous">
-                  <li><a href="read_data.html">Consulter</a></li>
-                  <li><a href="read_emprunt.html">Consulter emprunts</a></li>
+                  <li><a href={{url_for(app.authentification)}}>Authentification</a></li>
+                  <li><a href={{url_for(app.deconnexion)}}>Déconnexion</a></li>
                 </ul>
               </li>
             </ul>
