--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire d'enregistrement d'un nouveau client</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link href="static/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Enregistrer un nouveau client</h1>
