--- a/templates/hello.html
+++ b/templates/hello.html
@@ -7,7 +7,7 @@
 <body>
   <div>
         <div class="logo">
-          <img  src="logo.jpg">
+          <img  src="static/logo.jpg">
           <nav>
             <ul>
               <li class="deroulant" id="connect"><p>Menu</p>
