--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 .logo{
-  color:BurlyWood;
+  color:white;
   width:100%;
   display:flex;
   justify-content: space-around;
@@ -34,7 +34,7 @@ nav a{
   display: block;
   text-decoration: none;
   color:white;
-  border:2px solid white;
+  border:2px solid black;
   align-content: center;
   padding: 10px;
 }
@@ -45,7 +45,7 @@ nav p{
   display: block;
   text-decoration: none;
   color:white;
-  border:2px solid white;
+  border:2px solid black;
   padding: 3%;
   margin-left:10%;
 }
@@ -63,7 +63,7 @@ nav p:hover{
 .sous{
   display:none;
   background-color: gray;
-  border: 1px solid white;
+  border: 1px solid black;
   position: absolute;
   width: auto;
   z-index: 1000;
@@ -95,7 +95,7 @@ nav > ul li:hover .sous{
   border: 1px solid white;
   background-color: black;
   text-align: center;
-  color: white;
+  color: black;
   padding: 20px;
   display: inline-block;
   margin-left: 20px;
@@ -110,5 +110,5 @@ nav > ul li:hover .sous{
 
 }
 .txt {
-  color: white;
+  color: black;
 }
