--- a/templates/hello.html
+++ b/templates/hello.html
@@ -12,8 +12,18 @@
             <ul>
               <li class="deroulant" id="connect"><p>Menu</p>
                 <ul class="sous">
+                  <li><a href=consultation>Consultation</a></li>
+                  <li><a href=enregistrer_client>Enregistrer client</a></li>
+                  <li><a href=consultation_livre>Consultation livre</a></li>
+                  <li><a href=enregistrer_livre>Enregistrer livre</a></li>
+                  <li><a href=consultation_emprunts>Consultation emprunt</a></li>
+                  <li><a href=enregistrer_emprunt>Enregistrer emprunt</a></li>
+                </ul>
+              </li>
+              <li class="deroulant" id="connect"><p>Connexion</p>
+                <ul class="sous">
                   <li><a href=authentification>Authentification</a></li>
-                  <li><a href=app.deconnexion>Déconnexion</a></li>
+                  <li><a href=deconnexion>Déconnexion</a></li>
                 </ul>
               </li>
             </ul>
