--- a/templates/hello.html
+++ b/templates/hello.html
@@ -18,6 +18,7 @@
                   <li><a href=enregistrer_livre>Enregistrer livre</a></li>
                   <li><a href=consultation_emprunts>Consultation emprunt</a></li>
                   <li><a href=enregistrer_emprunt>Enregistrer emprunt</a></li>
+                  <li><a href=retour>Retour emprunt</a></li>
                 </ul>
               </li>
               <li class="deroulant" id="connect"><p>Connexion</p>
