--- a/templates/formulaire_livre.html
+++ b/templates/formulaire_livre.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire d'enregistrement d'un nouveau livre</title>
+    <link href="static/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>Enregistrer un nouveau livre</h1>
