--- a/templates/ajouter_livre.html
+++ b/templates/ajouter_livre.html
@@ -1,3 +1,9 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulaire d'enregistrement d'un nouveau client</title>
+    <link href="static/style.css" rel="stylesheet">
+</head>
 {% extends "layout.html" %}
 {% block content %}
 <div class="container bottomForm">
