--- a/templates/ajouter_livre.html
+++ b/templates/ajouter_livre.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulaire d'enregistrement d'un nouveau client</title>
+    <title>Formulaire d'enregistrement d'un nouveau livre</title>
     <link href="static/style.css" rel="stylesheet">
 </head>
 {% extends "layout.html" %}
@@ -12,9 +12,23 @@
         <div class="col-sm-3"></div>
         <form method="POST" class="text-left col-sm-6">
             {{ form.hidden_tag() }}
+            
+            <!-- Champ pour le nom -->
             <div class="form-group">
                 {{ form.nom.label }} {{ form.nom(class="form-control") }}
             </div>
+            
+            <!-- Champ pour le titre -->
+            <div class="form-group">
+                {{ form.titre.label }} {{ form.titre(class="form-control") }}
+            </div>
+            
+            <!-- Champ pour la date d'ajout -->
+            <div class="form-group">
+                {{ form.date_ajout.label }} {{ form.date_ajout(class="form-control") }}
+            </div>
+
+            <!-- Bouton de soumission -->
             {{ form.submit(class="btn btn-primary") }}
         </form>
         <div class="col-sm-3"></div>
